# RoyCalc

./: .gitignore  CMakeLists.txt  calc.c  calc.h  main.c
.gitignore/: calc.c  calc.h  main.c
